--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Example of listing people application",
   "main": "lib/src/index.js",
   "scripts": {
-    "build": "parcel index.html",
-    "watch": "parcel watch -p 3000 index.html",
+    "build": "parcel build index.html",
+    "watch": "parcel -p 3000 index.html",
     "test": "node_modules/.bin/karma start"
   },
   "repository": {
@@ -26,15 +26,18 @@
   "homepage": "https://github.com/spiel-examples/listing-people-frontend#readme",
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "node-sass": "^4.7.2",
+    "ionicons": "^3.0.0",
+    "node-sass": "^4.8.2",
     "picostyle": "^1.0.1",
+    "regenerator": "^0.12.3",
     "spiel-client": "^1.2.1",
-    "spiel-connect": "^0.1.0"
+    "spiel-connect": "^0.1.1"
   },
   "devDependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^1.2.0",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
     "karma": "^2.0.0",
