--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "parcel build index.html",
     "watch": "parcel -p 3000 index.html",
-    "test": "node_modules/.bin/karma start"
+    "test": "./node_modules/.bin/mocha --recursive -r ts-node/register --bail ./test/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -25,34 +25,28 @@
   },
   "homepage": "https://github.com/spiel-examples/listing-people-frontend#readme",
   "dependencies": {
+    "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.0.0",
     "ionicons": "^3.0.0",
     "node-sass": "^4.8.2",
-    "picostyle": "^1.0.1",
+    "picostyle": "^1.0.2",
     "regenerator": "^0.12.3",
     "spiel-client": "^1.2.1",
     "spiel-connect": "^0.1.1"
   },
   "devDependencies": {
-    "babel-preset-stage-0": "^6.24.1",
-    "browser-sync": "^2.23.6",
-    "browser-sync-webpack-plugin": "^1.2.0",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^2.30.1",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jsdom-launcher": "^6.1.2",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-opera-launcher": "^1.0.0",
-    "karma-remap-coverage": "^0.1.5",
-    "karma-typescript": "^3.0.12",
-    "source-map-loader": "^0.2.1",
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^2.2.48",
+    "@types/sinon": "^4.3.0",
+    "chai": "^4.1.2",
+    "jsdom": "^11.6.2",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^5.0.4",
+    "sinon": "^4.4.6",
+    "source-map-support": "^0.5.4",
     "style-loader": "^0.19.0",
-    "ts-loader": "^3.5.0",
-    "ts-node": "^3.3.0"
+    "ts-babel-node": "^1.1.1",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.7.2"
   }
 }
